# cmake-build

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  STM32F407VGTX_FLASH.ld  cmake_build.ioc
Core/: CMakeLists.txt
Core/Src/: main.c
Core/cmake/: STM32F4xx_HAL_PARA.cmake  gcc-arm-none-eabi.cmake
scripts/: app-unix.sh  app-windows.bat  clear.bat  clear.sh  doxygen.bat  doxygen.sh  list_presets.bat  test-unix.sh  test-windows.bat
